# HYPlayer

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cw/hyplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/audio/: AACEncoder.cpp  AACEncoder.h  IAudioPlayer.cpp  IAudioPlayer.h  SLAudioPlayer.cpp  SLAudioPlayer.h  SLAudioRecoder.cpp  SLAudioRecoder.h  SLPlayerLooper.cpp  SLPlayerLooper.h  SLRecoderLooper.cpp  SLRecoderLooper.h
app/src/main/cpp/base/: AVFrameData.cpp  AVFrameData.h  AVPacketData.cpp  AVPacketData.h  gl_utils.cpp  matrix_util.h  native_log.h  utils.cpp  utils.h
app/src/main/cpp/camera/: CameraBaseFilter.cpp  CameraBaseFilter.h  CameraFFVideoEncoder.cpp  CameraFFVideoEncoder.h  CameraLooper.cpp  CameraLooper.h  CameraRenderer.cpp  CameraRenderer.h  NDKCamera.cpp  NDKCamera.h
app/src/main/cpp/decode/: DecodeLooper.cpp  DecodeLooper.h  FFDecode.cpp  FFDecode.h  FFVideoDecode.cpp  FFVideoDecode.h  IDecode.cpp  IDecode.h  circle_av_frame_queue.cpp  circle_av_frame_queue.h
app/src/main/cpp/demux/: DemuxLooper.cpp  DemuxLooper.h  FFDemux.cpp  FFDemux.h  FFVideoDemux.cpp  FFVideoDemux.h  IDemux.cpp  IDemux.h  circle_av_packet_queue.cpp  circle_av_packet_queue.h
app/src/main/cpp/egl/: base_surface.cpp  base_surface.h  egl_core.cpp  egl_core.h  window_surface.cpp  window_surface.h
app/src/main/cpp/encode/: FFAudioEncoder.cpp  FFAudioEncoder.h  FFVideoEncoder.cpp  FFVideoEncoder.h  FFmpegCodecEncoder.cpp  FFmpegCodecEncoder.h  FFmpegEncoder.cpp  FFmpegEncoder.h  IVideoEncoder.cpp  IVideoEncoder.h  JavaMediaEncoder.cpp  JavaMediaEncoder.h  MediaCodecEncoder.cpp  MediaCodecEncoder.h  NDKCodecEncoder.cpp  NDKCodecEncoder.h  OffscreenRenderer.cpp  OffscreenRenderer.h  VideoEncoder.cpp  VideoEncoder.h
app/src/main/cpp/flutter/: FlutterFilter.cpp  FlutterFilter.h  FlutterLooper.cpp  FlutterLooper.h  FlutterRenderer.cpp  FlutterRenderer.h
app/src/main/cpp/flutter/paint/: FlutterBasePaint.cpp  FlutterBasePaint.h  SimplePaint.cpp  SimplePaint.h  SimplePaint2.cpp  SimplePaint2.h  SimplePaint3.cpp  SimplePaint3.h  TestPaint.cpp  TestPaint.h
app/src/main/cpp/flutter/widget/: BarrageData.h  BarrageView.cpp  BarrageView.h  Button.cpp  Button.h  ImageView.cpp  ImageView.h  TextView.cpp  TextView.h  View.cpp  View.h
app/src/main/cpp/image/: GifCreator.cpp  GifCreator.h  IAVFrameCreator.cpp  IAVFrameCreator.h  ImageCreator.cpp  ImageCreator.h  VIdeoCreator.cpp  VIdeoCreator.h  VideoCreator.cpp  VideoCreator.h
app/src/main/cpp/live/: LiveEncoder.cpp  LiveEncoder.h
app/src/main/cpp/player/: AudioPlayer.cpp  AudioPlayer.h  VideoPlayer.cpp  VideoPlayer.h
app/src/main/cpp/template/: AlphaBaseFilter.cpp  AlphaBaseFilter.h  AlphaFBOFilter.cpp  AlphaFBOFilter.h  TemplateBaseFilter.cpp  TemplateBaseFilter.h  TemplateFBOFilter.cpp  TemplateFBOFilter.h  TemplateLooper.cpp  TemplateLooper.h  TemplateRenderer.cpp  TemplateRenderer.h
app/src/main/cpp/video/: GLVideoLooper.cpp  GLVideoLooper.h  GLVideoPlayer.cpp  GLVideoPlayer.h  GLVideoRenderer.cpp  GLVideoRenderer.h  base_filter.cpp  base_filter.h  mediacodec_nv12_filter.cpp  mediacodec_nv12_filter.h  mediacodec_nv21_filter.cpp  mediacodec_nv21_filter.h
app/src/main/java/com/cw/hyplayer/: MainActivity.kt  PrepareActivity.kt
app/src/main/java/com/cw/hyplayer/audio/: AudioService.kt  HYAudioPlayer.kt  MediaSource.kt
app/src/main/java/com/cw/hyplayer/camera/: BaseCamera.java  CameraV1.java  CameraV2.java  CameraView.kt  ICameraSizeListener.java  LiveActivity.kt  NDKLiveActivity.kt  NativeCameraView.kt
app/src/main/java/com/cw/hyplayer/encode/: EncodeActivity.kt  FFmpegMediaEncoder.kt  JavaMediaEncoder.kt  NDKMediaEncoder.kt  VideoEncoder.kt
app/src/main/java/com/cw/hyplayer/encode/audio/: AudioCapture.kt  AudioCaptureActivity.kt  AudioEncoder.kt  AudioEncoderActivity.kt  HWAudioEncoder.kt
app/src/main/java/com/cw/hyplayer/flutter/: FlutterActivity.kt  FlutterView.kt
app/src/main/java/com/cw/hyplayer/template/: TemplateActivity.kt  TemplateView.kt
app/src/main/java/com/cw/hyplayer/video/: HYVideoActivity.kt  HYVideoPlayer.kt  HYVideoView.kt  IVideoViewCallback.kt  NativeSurfaceView.kt
app/src/main/java/com/cw/hyplayer/viewer/: NativeObjView.kt  ObjViewerActivity.kt
app/src/main/jniLibs/includes/libjpeg/: jconfig.h
app/src/main/res/layout/: activity_audio_capture.xml  activity_audio_recoder.xml  activity_encode.xml  activity_flutter.xml  activity_live.xml  activity_main.xml  activity_ndk_live.xml  activity_obj_viewer.xml  activity_prepare.xml  activity_template.xml  activity_video.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cw/hyplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
